# OPC-Harness

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  opc.example.toml  pyproject.toml  run_opc.py  run_tasks.py  tasks-beta-completion.md  tasks-p0.md  tasks-p1.md  tasks-p10.md  tasks-p11.md  tasks-p2.md  tasks-p3.md  tasks-p4.md  tasks-p6.md  tasks-p8.md  tasks-p9.md  tasks.example.md  tasks.md
docs/: DOCS_STRUCTURE.md  harness-guide.md  knowledge-retrieval-design.md  new_tools_guide.md
examples/: quickstart_minimal.py  sample_tasks.md
scripts/: README.md  check-pre-upload.sh  check-release.py  cleanup-dry-run.py  run-opc.py  run-rag-eval.py  run-tasks.py  upload-to-github.sh
templates/qt/widgets-cmake/: CMakeLists.txt
templates/qt/widgets-cmake/src/: MainWindow.cpp  MainWindow.h  main.cpp
test_data/: README.md  test.py
tests/: test_agent.py  test_bm25_json.py  test_build_lint_tools.py  test_cli_smoke.py  test_compliance_data_boundaries_docs.py  test_config_priority.py  test_context_governance_docs.py  test_cost_hard_limit.py  test_cpp_symbol_search.py  test_deployment_boundary_docs.py  test_docker_smoke.py  test_docs_structure.py  test_embedding_config.py  test_environment.py  test_errors.py  test_git_tools.py  test_golden_run_walkthrough.py  test_guardrail_policy.py  test_impact_analyzer.py  test_import_graph.py  test_indexer_dependencies.py  test_industrial_benchmark_docs.py  test_knowledge.py  test_knowledge_index_paths.py  test_local_usage_boundary_docs.py  test_long_task_system_docs.py  test_memory.py  test_message.py  (+44 more)
(+107 files in other folders)
